--- a/index.html
+++ b/index.html
@@ -82,14 +82,22 @@
         </div>
       </nav>
   
-      <!-- Hero principal -->
-      <section class="hero-section position-relative">
-        <img
-          src="assets/hero.webp"
-          alt="Hero"
-          class="img-fluid w-100"
-          style="max-height: 600px; object-fit: cover"
-        />
+  <!-- Hero principal -->
+<section class="hero-section position-relative">
+  <img
+    src="assets/hero.webp"
+    alt="Hero"
+    class="img-fluid w-100 hero-image"
+    style="max-height: 600px; object-fit: cover"
+  />
+
+  <div class="hero-overlay"></div>
+
+  <div class="hero-text text-center text-white">
+    <h1 class="hero-title">LOVE ANIMALS</h1>
+    <h2 class="hero-subtitle">EAT PLANTS</h2>
+  </div>
+</section>
   
         <!-- Protein carrousel -->
         <section class="carousel-proteins bg-falcon text-white py-5">
