final fixed buttons

--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
   </footer>
 
   <!-- Botones fixed -->
-  <!-- Botón inferior izquierdo -->
-  <a href="#" class="btn btn-primary-birdman fixed-btn left">
-    <i class="bi bi-chat-left-text"></i>
-    Asesórate con un experto
-  </a>
+<!-- Botón inferior izquierdo -->
+<a href="#" class="btn btn-primary-birdman fixed-btn left">
+  <i class="bi bi-chat-left-text"></i>
+  <span>Asesórate con un experto</span>
+</a>
 
-  <!-- Botón inferior derecho -->
-  <a href="#" class="btn btn-primary-birdman fixed-btn right">
-    <i class="fas fa-feather"></i>
-    Conoce tu ave
-  </a>
+<!-- Botón inferior derecho -->
+<a href="#" class="btn btn-primary-birdman fixed-btn right">
+  <i class="fas fa-feather"></i>
+  <span>Conoce tu ave</span>
+</a>
   </section>
 
   <!-- Bootstrap 5.3.2 Bundle JS CDN (con Popper incluido) -->
