--- a/index.html
+++ b/index.html
@@ -158,6 +158,77 @@
     </div>
   </section>
 
+  <!-- Animacion -->
+  <section class="benefits-bar">
+    <div class="benefits-track">
+      <div class="benefits-content">
+        <span><i class="bi bi-patch-check-fill"></i> SUPLEMENTOS ALIMENTICIOS PARA CADA NECESIDAD</span>
+        <span><i class="bi bi-patch-check-fill"></i> 100% VEGANOS</span>
+        <span><i class="bi bi-patch-check-fill"></i> APOYA TU SALUD Y LA DEL PLANETA</span>
+        <span><i class="bi bi-patch-check-fill"></i> SIN AZÚCARES AÑADIDOS</span>
+        <span><i class="bi bi-patch-check-fill"></i> FUENTE DE PROTEÍNA VEGETAL</span>
+        <!-- Duplicamos para crear un loop continuo -->
+        <span><i class="bi bi-patch-check-fill"></i> SUPLEMENTOS ALIMENTICIOS PARA CADA NECESIDAD</span>
+        <span><i class="bi bi-patch-check-fill"></i> 100% VEGANOS</span>
+        <span><i class="bi bi-patch-check-fill"></i> APOYA TU SALUD Y LA DEL PLANETA</span>
+        <span><i class="bi bi-patch-check-fill"></i> SIN AZÚCARES AÑADIDOS</span>
+        <span><i class="bi bi-patch-check-fill"></i> FUENTE DE PROTEÍNA VEGETAL</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Carrusel de Creatinas -->
+  <section class="carousel-creatinas bg-creatina text-white py-5">
+    <div class="container text-center position-relative">
+      <h2 class="mb-4">Creatina</h2>
+
+      <div class="carousel-inner" id="creatina-carousel" aria-live="polite">
+        <div class="carousel-slide active" data-bg="creatina">
+          <div class="carousel-image">
+            <img src="assets/creatina.webp" alt="Creatina">
+          </div>
+          <h3>Sin saborizantes</h3>
+          <p>Micronizada y de alta pureza</p>
+          <a href="#" class="btn-creatina">Comprar ahora</a>
+        </div>
+
+        <div class="carousel-slide" data-bg="creatina-pink">
+          <div class="carousel-image">
+            <img src="assets/creatina-pink-lemonade.png" alt="Creatina Pink Lemonade">
+          </div>
+          <h3>Pink Lemonade</h3>
+          <p>Electrolyte refresher</p>
+          <a href="#" class="btn-creatina-pink">Comprar ahora</a>
+        </div>
+
+        <div class="carousel-slide" data-bg="creatina-lemon">
+          <div class="carousel-image">
+            <img src="assets/creatina-lemon-twist.webp" alt="Creatina Lemon Twist">
+          </div>
+          <h3>Lemon Twist</h3>
+          <p>Electrolyte refresher</p>
+          <a href="#" class="btn-creatina-lemon">Comprar ahora</a>
+        </div>
+
+        <div class="carousel-slide" data-bg="creatina-watermelon">
+          <div class="carousel-image">
+            <img src="assets/creaytina watermelon-splash.webp" alt="Creatina Watermelon">
+          </div>
+          <h3>Watermelon Splash</h3>
+          <p>Electrolyte refresher</p>
+          <a href="#" class="btn-creatina-watermelon">Comprar ahora</a>
+        </div>
+      </div>
+
+      <button class="carousel-arrow left" id="prev-slide-creatina" aria-label="Anterior">&lt;</button>
+      <button class="carousel-arrow right" id="next-slide-creatina" aria-label="Siguiente">&gt;</button>
+
+      <div class="carousel-dots mt-4" id="carousel-dots-creatina"></div>
+    </div>
+  </section>
+
+
+
   <!-- Footer -->
   <footer class="site-footer text-white">
     <div class="container py-5">
