--- a/index.html
+++ b/index.html
@@ -227,7 +227,65 @@
     </div>
   </section>
 
-
+  <!-- Reviews -->
+  <section class="reviews-section py-5">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="fw-bold">Lo que dicen nuestros clientes</h2>
+        <p class="text-muted">Opiniones reales sobre su experiencia</p>
+      </div>
+  
+      <div class="review-carousel d-flex flex-nowrap overflow-auto pb-4">
+        <!-- Review Card -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0" style="width: 280px;">
+          <img src="./assets/review1.png" class="card-img-top" alt="Cliente 1">
+          <div class="card-body">
+            <h5 class="card-title text-performance mb-2">Alex Shuz</h5>
+            <p class="card-text text-gray">“Desde que probé Falcon, no quiero otra proteína. Se mezcla súper bien, tiene un sabor delicioso y lo mejor es que es completamente vegana. Me ayuda a mantener mi rendimiento sin sentirme pesado.”</p>
+            <div class="stars text-fitmingo">
+              ★★★★★
+            </div>
+          </div>
+        </div>
+  
+        <div class="review-card card shadow-sm me-3 flex-shrink-0" style="width: 280px;">
+          <img src="./assets/review2.png" class="card-img-top" alt="Cliente 2">
+          <div class="card-body">
+            <h5 class="card-title text-falcon mb-2">Nataly Gutiérrez</h5>
+            <p class="card-text text-gray">“Los BCAAs & Glutamina de Birdman han sido clave en mi recuperación. Desde que los uso, noto menos fatiga muscular y puedo entrenar con más intensidad al día siguiente. ¡Además, se mezclan súper bien!”</p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+  
+        <div class="review-card card shadow-sm me-3 flex-shrink-0" style="width: 280px;">
+          <img src="./assets/review 3.png" class="card-img-top" alt="Cliente 3">
+          <div class="card-body">
+            <h5 class="card-title text-parrot mb-2">Angie Flores</h5>
+            <p class="card-text text-gray">“Parrot es justo lo que buscaba para el desayuno. Me da la energía que necesito sin sentirme pesado y me encanta su sabor. Se ha vuelto parte de mi rutina diaria.”</p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+  
+        <div class="review-card card shadow-sm me-3 flex-shrink-0" style="width: 280px;">
+          <img src="./assets/review4.png" class="card-img-top" alt="Cliente 4">
+          <div class="card-body">
+            <h5 class="card-title text-peacock mb-2">Eduardo Pérez Sandi</h5>
+            <p class="card-text text-gray">“La creatina de Birdman es la mejor que he probado. Se disuelve perfectamente, no tiene sabor raro y he notado un gran cambio en mi fuerza y resistencia en el gimnasio. No la cambio por nada.”</p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+  
+        <div class="review-card card shadow-sm me-3 flex-shrink-0" style="width: 280px;">
+          <img src="./assets/review5.png" class="card-img-top" alt="Cliente 5">
+          <div class="card-body">
+            <h5 class="card-title text-falcon mb-2">Ale Rubio</h5>
+            <p class="card-text text-gray">“Fitmingo es la proteína perfecta para mí. Sus ingredientes como ácido hialurónico y Svetol® realmente hacen la diferencia. La tomo todos los días y me encanta cómo me hace sentir más ligera y con energía.”</p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="site-footer text-white">
