enhance faq section

--- a/index.html
+++ b/index.html
@@ -228,77 +228,179 @@
   </section>
 
 
-<!-- Reviews -->
-<section class="reviews-section py-5">
-  <div class="container">
-    <div class="text-center mb-5">
-      <h2 class="fw-bold">Lo que dicen nuestros clientes</h2>
-      <p class="text-muted">Opiniones reales sobre su experiencia</p>
+  <!-- Reviews -->
+  <section class="reviews-section py-5">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="fw-bold">Lo que dicen nuestros clientes</h2>
+        <p class="text-muted">Opiniones reales sobre su experiencia</p>
+      </div>
+
+      <div class="review-carousel d-flex flex-nowrap overflow-auto pb-4">
+        <!-- Falcon -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0 falcon" style="width: 280px;">
+          <img src="./assets/review1.png" class="card-img-top" alt="Cliente 1">
+          <div class="card-body">
+            <h5 class="card-title text-performance mb-2">Alex Shuz</h5>
+            <p class="card-text text-gray">
+              “Desde que probé Falcon, no quiero otra proteína. Se mezcla súper bien, tiene un sabor delicioso y lo
+              mejor es que es completamente vegana. Me ayuda a mantener mi rendimiento sin sentirme pesado.”
+            </p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+
+        <!-- BCAAs & Glutamina -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0 creatina" style="width: 280px;">
+          <img src="./assets/review2.png" class="card-img-top" alt="Cliente 2">
+          <div class="card-body">
+            <h5 class="card-title text-falcon mb-2">Nataly Gutiérrez</h5>
+            <p class="card-text text-gray">
+              “Los BCAAs & Glutamina de Birdman han sido clave en mi recuperación. Desde que los uso, noto menos fatiga
+              muscular y puedo entrenar con más intensidad al día siguiente. ¡Además, se mezclan súper bien!”
+            </p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+
+        <!-- Parrot -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0 parrot" style="width: 280px;">
+          <img src="./assets/review 3.png" class="card-img-top" alt="Cliente 3">
+          <div class="card-body">
+            <h5 class="card-title text-parrot mb-2">Angie Flores</h5>
+            <p class="card-text text-gray">
+              “Parrot es justo lo que buscaba para el desayuno. Me da la energía que necesito sin sentirme pesado y me
+              encanta su sabor. Se ha vuelto parte de mi rutina diaria.”
+            </p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+
+        <!-- Creatina -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0 creatina" style="width: 280px;">
+          <img src="./assets/review4.png" class="card-img-top" alt="Cliente 4">
+          <div class="card-body">
+            <h5 class="card-title text-peacock mb-2">Eduardo Pérez Sandi</h5>
+            <p class="card-text text-gray">
+              “La creatina de Birdman es la mejor que he probado. Se disuelve perfectamente, no tiene sabor raro y he
+              notado un gran cambio en mi fuerza y resistencia en el gimnasio. No la cambio por nada.”
+            </p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+
+        <!-- Fitmingo -->
+        <div class="review-card card shadow-sm me-3 flex-shrink-0 fitmingo" style="width: 280px;">
+          <img src="./assets/review5.png" class="card-img-top" alt="Cliente 5">
+          <div class="card-body">
+            <h5 class="card-title text-fitmingo mb-2">Ale Rubio</h5>
+            <p class="card-text text-gray">
+              “Fitmingo es la proteína perfecta para mí. Sus ingredientes como ácido hialurónico y Svetol® realmente
+              hacen la diferencia. La tomo todos los días y me encanta cómo me hace sentir más ligera y con energía.”
+            </p>
+            <div class="stars text-fitmingo">★★★★★</div>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="review-carousel d-flex flex-nowrap overflow-auto pb-4">
-      <!-- Falcon -->
-      <div class="review-card card shadow-sm me-3 flex-shrink-0 falcon" style="width: 280px;">
-        <img src="./assets/review1.png" class="card-img-top" alt="Cliente 1">
-        <div class="card-body">
-          <h5 class="card-title text-performance mb-2">Alex Shuz</h5>
-          <p class="card-text text-gray">
-            “Desde que probé Falcon, no quiero otra proteína. Se mezcla súper bien, tiene un sabor delicioso y lo mejor es que es completamente vegana. Me ayuda a mantener mi rendimiento sin sentirme pesado.”
-          </p>
-          <div class="stars text-fitmingo">★★★★★</div>
-        </div>
+  <!-- FAQ Section -->
+  <section class="faq-section py-5">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2 class="fw-bold">Preguntas Frecuentes</h2>
+        <p class="text-muted">Todo lo que necesitas saber sobre nuestros productos y servicios</p>
       </div>
 
-      <!-- BCAAs & Glutamina -->
-      <div class="review-card card shadow-sm me-3 flex-shrink-0 creatina" style="width: 280px;">
-        <img src="./assets/review2.png" class="card-img-top" alt="Cliente 2">
-        <div class="card-body">
-          <h5 class="card-title text-falcon mb-2">Nataly Gutiérrez</h5>
-          <p class="card-text text-gray">
-            “Los BCAAs & Glutamina de Birdman han sido clave en mi recuperación. Desde que los uso, noto menos fatiga muscular y puedo entrenar con más intensidad al día siguiente. ¡Además, se mezclan súper bien!”
-          </p>
-          <div class="stars text-fitmingo">★★★★★</div>
+      <div class="row faq-list gx-4 gy-4">
+        <!-- Pregunta 1 -->
+        <div class="col-md-6">
+          <div class="faq-item falcon">
+            <button class="faq-question">
+              <span>¿Qué hace diferente a la proteína Falcon?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              Falcon es una proteína vegetal completa con perfil de aminoácidos balanceado, sin aditivos artificiales y
+              con digestión ligera, ideal para atletas y veganos.
+            </div>
+          </div>
         </div>
-      </div>
 
-      <!-- Parrot -->
-      <div class="review-card card shadow-sm me-3 flex-shrink-0 parrot" style="width: 280px;">
-        <img src="./assets/review 3.png" class="card-img-top" alt="Cliente 3">
-        <div class="card-body">
-          <h5 class="card-title text-parrot mb-2">Angie Flores</h5>
-          <p class="card-text text-gray">
-            “Parrot es justo lo que buscaba para el desayuno. Me da la energía que necesito sin sentirme pesado y me encanta su sabor. Se ha vuelto parte de mi rutina diaria.”
-          </p>
-          <div class="stars text-fitmingo">★★★★★</div>
+        <!-- Pregunta 2 -->
+        <div class="col-md-6">
+          <div class="faq-item creatina">
+            <button class="faq-question">
+              <span>¿Cómo debo tomar la creatina de Birdman?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              Puedes tomar una porción (5g) al día, preferiblemente después de entrenar o junto con una comida rica en
+              carbohidratos para mejorar su absorción.
+            </div>
+          </div>
         </div>
-      </div>
 
-      <!-- Creatina -->
-      <div class="review-card card shadow-sm me-3 flex-shrink-0 creatina" style="width: 280px;">
-        <img src="./assets/review4.png" class="card-img-top" alt="Cliente 4">
-        <div class="card-body">
-          <h5 class="card-title text-peacock mb-2">Eduardo Pérez Sandi</h5>
-          <p class="card-text text-gray">
-            “La creatina de Birdman es la mejor que he probado. Se disuelve perfectamente, no tiene sabor raro y he notado un gran cambio en mi fuerza y resistencia en el gimnasio. No la cambio por nada.”
-          </p>
-          <div class="stars text-fitmingo">★★★★★</div>
+        <!-- Pregunta 3 -->
+        <div class="col-md-6">
+          <div class="faq-item parrot">
+            <button class="faq-question">
+              <span>¿Parrot sirve solo para desayuno?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              ¡No! Parrot puede disfrutarse a cualquier hora. Su mezcla equilibrada de carbohidratos, proteínas y grasas
+              saludables lo hace perfecto como snack o post-entreno.
+            </div>
+          </div>
         </div>
-      </div>
 
-      <!-- Fitmingo -->
-      <div class="review-card card shadow-sm me-3 flex-shrink-0 fitmingo" style="width: 280px;">
-        <img src="./assets/review5.png" class="card-img-top" alt="Cliente 5">
-        <div class="card-body">
-          <h5 class="card-title text-fitmingo mb-2">Ale Rubio</h5>
-          <p class="card-text text-gray">
-            “Fitmingo es la proteína perfecta para mí. Sus ingredientes como ácido hialurónico y Svetol® realmente hacen la diferencia. La tomo todos los días y me encanta cómo me hace sentir más ligera y con energía.”
-          </p>
-          <div class="stars text-fitmingo">★★★★★</div>
+        <!-- Pregunta 4 -->
+        <div class="col-md-6">
+          <div class="faq-item fitmingo">
+            <button class="faq-question">
+              <span>¿Qué beneficios tiene Fitmingo?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              Fitmingo combina ingredientes funcionales como ácido hialurónico y Svetol® para mejorar la piel, apoyar el
+              metabolismo y mantenerte con energía durante el día.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 5 -->
+        <div class="col-md-6">
+          <div class="faq-item peacock">
+            <button class="faq-question">
+              <span>¿Los productos Birdman son libres de gluten?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              Sí, todos nuestros productos están certificados libres de gluten y fabricados en instalaciones dedicadas
+              para garantizar la pureza.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 6 -->
+        <div class="col-md-6">
+          <div class="faq-item performance">
+            <button class="faq-question">
+              <span>¿Dónde puedo comprar los productos Birdman?</span>
+              <i class="bi bi-chevron-down"></i>
+            </button>
+            <div class="faq-answer">
+              Puedes encontrarlos en nuestra tienda oficial en línea y en tiendas aliadas de nutrición en todo México.
+              También ofrecemos envíos internacionales.
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
 
   <!-- Footer -->
   <footer class="site-footer text-white">
